fixed hamburger align

--- a/retail_banking/static/css/base1.css
+++ b/retail_banking/static/css/base1.css
@@ -32,7 +32,7 @@ font-size: 30px;
 padding-top: auto;
 margin: auto;
 margin-left: calc(auto);
-transform: translateX(-50%);
+transform: translateX(-25%);
 }
 
 .menulines
@@ -40,7 +40,8 @@ transform: translateX(-50%);
     font-size: 30px;
     cursor: pointer;
     padding-left: 20px; 
-    transition: 0.5s ease;
+    text-align: center;
+    transition: 0.5s ease-in-out;
 }
 
 .my_sidebar
